# gitlab_lab

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  CODEBUDDY.md  COMPONENT-README.md  CONTRIBUTING.md  LICENSE.md  PROJECT_SUMMARY.md  README.md
.claude/: settings.local.json
examples/: README.md  advanced-usage.yml  basic-usage.yml  multi-project-usage.yml
labs/: README.md
labs/lab-00-gitlab-self-host-docker/: .env.example  .gitlab-ci.yml  README.md  WINDOWS.md  docker-compose.windows.yml  docker-compose.yml
labs/lab-00-gitlab-self-host-docker/scripts/: cleanup.sh  get-password.sh  register-runner.sh  setup-gitlab-windows.bat  setup-gitlab-windows.ps1  setup-gitlab.sh  setup.sh  status.sh
labs/lab-01-basic-pipeline/: .gitlab-ci.yml  README.md
labs/lab-02-stages-jobs/: .gitlab-ci.yml  README.md
labs/lab-03-variables-artifacts/: .gitlab-ci.yml  README.md
labs/lab-04-docker-integration/: .dockerignore  .gitlab-ci.yml  .hadolint.yaml  Dockerfile  README.md  app.js  docker-compose.yml  jest.config.js  package.json  test.js
labs/lab-05-testing-integration/: .eslintrc.security.js  .gitlab-ci.yml  README.md  jest.config.js  package.json
labs/lab-06-security-scanning/: .gitlab-ci.yml  README.md  package.json
labs/lab-07-advanced-patterns/: .gitlab-ci.yml  README.md  package.json
labs/lab-08-runner-management/: .gitlab-ci.yml  README.md  package.json
labs/lab-09-conditional-pipeline/: .gitlab-ci.yml  Calculator.java  README.md  calculator.py
labs/lab-10-evergreen-pipeline/: .gitlab-ci.yml  README.md  config.env.example  config.yaml.example  demo.py  enhanced_evergreen_scheduler.py  evergreen_scanner.py  requirements.txt  run.sh  test_enhanced_scanner.py  test_scanner.py
labs/lab-11-git-ops/: .gitlab-ci-python.yml  .gitlab-ci.yml  README.md
labs/lab-11-git-ops/python/: README.md  (+6 more)
labs/lab-12-gitlab-workflows/: .gitlab-ci.yml  README.md
labs/lab-13-child-pipeline-inheritance/: .gitlab-ci.yml  COMPONENT-README.md  README.md  example-usage.yml  minimal-test.yml  test-component-inclusion.yml  test-simple-component.yml
labs/lab-14-component/: .gitlab-ci.yml  .gitlab-ci_sample-user.yml  README.md  USAGE-PATTERNS.md
labs/lab-15-component-usage-tracking/: README.md
labs/lab-16-mend-renovate/: .env.example  CLAUDE.md  README.md  docker-compose.yml  docker.md
labs/lab-16-renovate-runner/: .gitlab-ci.yml  README.md  config.js  logs  renovate.json
labs/lab-16-renovate-runner/sample-projects/python-app/: pyproject.toml  renovate.json  requirements.txt
labs/lab-17-liquibase-mysql/: .gitlab-ci.yml  README.md  docker-compose.yml  liquibase.properties
labs/lab-18-liquibase-mssql/: .gitlab-ci.yml  README.md  docker-compose.yml
labs/lab-18-liquibase-oracle/: .gitlab-ci.yml  Dockerfile.liquibase  README.md  docker-compose.yml  liquibase.properties
labs/lab-19-configu-ci-integration/: INDEX.md  README.md  SETUP.md  STRUCTURE.txt  comparison.md
labs/lab-20-mark-confluence-publisher/: .env.template  .gitignore  QUICK-REFERENCE.md  README.md  SETUP.md  publish.ps1  publish.sh  sample.md
labs/lab-21-python-confluence-publisher/: .env.template  .gitignore  README.md  example.md  publish.py  requirements.txt  setup.ps1
templates/child-pipeline-inheritance/: template.yml
utilities/windows/: .gitignore  Cleanup-DiskSpace.ps1  Collect-EventLogs.ps1  README.md  Test-EventLogScript.ps1
(+138 files in other folders)
